tests/circuits/invalids/invalid_pin_1.nts
.chipsets:
input   a
input   b
4081    and
output  s
.links:
a:1     and:-1
b:1     and:2
and:3    s:1